# AutoPhrase

./: .gitignore  CMakeLists.txt  Makefile  README.md  auto_phrase.sh  compile.sh  filter.py  gdb.cfg  phrasal_segmentation.sh  prepare_for_topicmodeling.py  removeEmoji.py  runAutoPhrase.sh  runningExample1.sh  runningExample2.sh  runningExample3.sh  runningExample4.sh  runningExample6.sh  simple_segmentation.sh
data/: extract_contents_from_json.py  process20newsgroups.py  stopwords.txt
data/EN/: stopwords.txt
src/: main.cpp  segment.cpp
src/frequent_pattern_mining/: frequent_pattern_mining.h
src/utils/: commandline_flags.h  filtered_phrases.h  parameters.h
tools/tokenizer/src/: Tokenizer.java
tools/treetagger/: index.html  install-tagger.sh  pos_tag.sh
tools/treetagger/cmd/: tagger-chunker-english  tagger-chunker-french  tagger-chunker-german  tagger-chunker-spanish  tree-tagger-bulgarian  tree-tagger-catalan  tree-tagger-czech  tree-tagger-danish  tree-tagger-dutch  tree-tagger-english  tree-tagger-estonian  tree-tagger-finnish  tree-tagger-french  tree-tagger-galician  tree-tagger-german  tree-tagger-greek  tree-tagger-italian  tree-tagger-korean  tree-tagger-latin  tree-tagger-middle-high-german  tree-tagger-polish  tree-tagger-portuguese  tree-tagger-portuguese-finegrained  tree-tagger-portuguese2  tree-tagger-romanian  tree-tagger-russian  tree-tagger-slovak  tree-tagger-slovenian  tree-tagger-spanish  tree-tagger-spanish-ancora  tree-tagger-swahili
